# scatterbrain-rs

./: .gitignore  Cargo.toml  README.md  build.rs  cargokit.yaml  flutter_rust_bridge.yaml  out.rs
.zed/: settings.json
src/: connection.rs  constants.rs  crypto.rs  frb_generated.rs  lib.rs  scatterbrain.proto  types.rs
src/api/: api.rs  connection.rs  error.rs  mdns.rs  mirror.rs  mod.rs  response.rs  serialize.rs  types.rs
src/test/: ack-stream
