[package]
name = "scatterbrain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
byteorder = "1.5.0"
crc = "3.2.1"
env_logger = "0.11.3"
futures = { version = "0.3.30", features = ["io-compat", "compat"] }
log = "0.4.22"
mdns-sd = "0.11.1"
prost = "0.13.0"
prost-types = "0.13.0"
serde = { version = "1.0.204", features = ["derive"] }
sodiumoxide = "0.2.7"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "time",
    "sync",
] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
bip39 = "2.0.0"
chrono = "0.4.38"
serde_json = "1.0.127"
flutter_rust_bridge = { version = "=2.4.0", optional = true }
tokio-util = "0.7.12"


[build-dependencies]
prost-build = "0.13.0"

[features]
flutter = ["dep:flutter_rust_bridge"]
